  * Fix LP: #1013186 - install our vendor preferences as application
    defaults rather than GRE defaults, so that they are loaded after
    the upstream defaults again. The upstream defaults were also moved
    as part of the webapp runtime work (which has it's own application
    defaults)
    - update debian/firefox.install.in
    - update debian/firefox.links.in

  [ Martin Pitt <martin.pitt@ubuntu.com> ]
  * Add partial support for Python 3 in the apport hook
    - update debian/apport/source_firefox.py.in

 -- Chris Coulson <chris.coulson@canonical.com>  Thu, 07 Jun 2012 23:00:12 +0100

firefox-trunk (15.0~a1~hg20120603r95688-0ubuntu1) quantal; urgency=low

  * New upstream snapshot v15.0 A1 HG20120603R95688

  * Update globalmenu-extension to 3.2.4 prerelease r339
  * Fix LP: #993273 - Exception thrown in Apport hook with preferences
    which have empty values
    - update debian/apport/source_firefox.py.in
  * Report errors when parsing preferences and plugins in the Apport hook
    - update debian/apport/source_firefox.py.in
  * Handle line breaks in preference files
    - update debian/apport/source_firefox.py.in
  * Don't build with --enable-thumb2 on armel in Quantal
    - update debian/rules
    - update debian/config/mozconfig.in
  * Separate the package name from the application name. This enables us to
    change the package name without having to modify the application (eg,
    to allow us to provide official branded versions of Firefox ESR using
    the package name "firefox-esr"). In doing this, also drop the patch we
    had to rename Firefox in nightlies, and just use some magic in debian/rules
    instead
    - update debian/README.Debian.in
    - update debian/apport/source_firefox.py.in
    - update debian/build/get-orig-source.mk
    - update debian/control{,.in}
    - update debian/control.langpacks
    - update debian/control.langpacks.unavail
    - update debian/firefox-locale.preinst.in
    - update debian/firefox.install.in