@@ -74,6 +74,8 @@ firefox-trunk (15.0~a1~hg20120603r95688-0ubuntu2) UNRELEASED; urgency=low
     defaults)
     - update debian/firefox.install.in
     - update debian/firefox.links.in
+  * Fully support Python 3 in the apport hook
+    - update debian/apport/source_firefox.py.in
 
   [ Martin Pitt <martin.pitt@ubuntu.com> ]
   * Add partial support for Python 3 in the apport hook
